--- a/frea_gazebo/config/ros_controllers.yaml
+++ b/frea_gazebo/config/ros_controllers.yaml
@@ -1,42 +1,99 @@
+frea:
+    controllers:
+        state:
+            type: joint_state_controller/JointStateController
+            publish_rate: 50
+        position:
+            left_ear_controller:
+                type: position_controllers/JointPositionController
+                joint: left_ear_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
+            right_ear_controller:
+                type: position_controllers/JointPositionController
+                joint: right_ear_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
+            mouth_controller:
+                type: position_controllers/JointPositionController
+                joint: mouth_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
+            head_controller:
+                type: position_controllers/JointPositionController
+                joint: head_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
+            lower_neck_controller:
+                type: position_controllers/JointPositionController
+                joint: lower_neck_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
+            upper_neck_controller:
+                type: position_controllers/JointPositionController
+                joint: upper_neck_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
+            upper_tail_controller:
+                type: position_controllers/JointPositionController
+                joint: upper_tail_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
+            lower_tail_controller:
+                type: position_controllers/JointPositionController
+                joint: lower_tail_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
+        velocity:
+            left_wheel_controller:
+                type: velocity_controllers/JointVelocityController
+                joint: left_wheel_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
+            right_wheel_controller:
+                type: velocity_controllers/JointVelocityController
+                joint: right_wheel_joint
+                pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
+
 gazebo_ros_control:
     pid_gains:
         left_wheel_joint:
-            p: 10000
+            p: 10
             i: 0
             d: 0
         right_wheel_joint:
-            p: 10000
+            p: 10
             i: 0
             d: 0
         lower_neck_joint:
-            p: 10000
+            p: 5000
             i: 0
-            d: 0
+            d: 1
         upper_neck_joint:
             p: 10000
             i: 0
-            d: 0
+            d: 0.1
         lower_tail_joint:
-            p: 10000
+            p: 1000
             i: 0
             d: 0
         upper_tail_joint:
             p: 10000
             i: 0
-            d: 0
+            d: 1
         head_joint:
-            p: 10000
+            p: 1000
             i: 0
-            d: 0
+            d: 1
         mouth_joint:
-            p: 10000
+            p: 200
             i: 0
-            d: 0
+            d: 0.5
         left_ear_joint:
-            p: 10000
+            p: 100
             i: 0
-            d: 0
+            d: 0.01
         right_ear_joint:
-            p: 10000
+            p: 100
             i: 0
-            d: 0
+            d: 0.01
