Training motion controller in progress.
This is quite a large commit, I've added a custom Gazebo contact detection plugin, custom FREA messages package, and sorted out Melodic->Noetic changes. Lots of little fixes to scripts and files that were untested in earlier commits. Training seems to work for a bit before gazebo freezes (without crashing, so I don't seem to be able to gdb the damn thing :(, but we'll figure it out eventually).

--- a/frea_gazebo/package.xml
+++ b/frea_gazebo/package.xml
@@ -15,6 +15,7 @@
   <depend>gazebo_plugins</depend>
   <depend>gazebo_ros</depend>
   <depend>roscpp</depend>
+  <depend>frea_msgs</depend>
 
   <export>
     <gazebo_ros gazebo_model_path="${prefix}/models"
