--- a/frea_training_envs/CMakeLists.txt
+++ b/frea_training_envs/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(frea_training_envs)
 
+SET(ROS_PYTHON_VERSION 3)
+
 find_package(catkin REQUIRED COMPONENTS
-  openai_ros
   rospy
 )
 
 catkin_python_setup()
 
 catkin_package(
-  CATKIN_DEPENDS openai_ros rospy
+  CATKIN_DEPENDS rospy
 )
