--- a/frea_gazebo/config/ros_controllers.yaml
+++ b/frea_gazebo/config/ros_controllers.yaml
@@ -4,53 +4,53 @@ frea:
             type: joint_state_controller/JointStateController
             publish_rate: 50
         position:
-            left_ear_controller:
+            left_ear_joint_controller:
                 type: position_controllers/JointPositionController
                 joint: left_ear_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
 
-            right_ear_controller:
+            right_ear_joint_controller:
                 type: position_controllers/JointPositionController
                 joint: right_ear_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
 
-            mouth_controller:
+            mouth_joint_controller:
                 type: position_controllers/JointPositionController
                 joint: mouth_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
 
-            head_controller:
+            head_joint_controller:
                 type: position_controllers/JointPositionController
                 joint: head_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
 
-            lower_neck_controller:
+            lower_neck_joint_controller:
                 type: position_controllers/JointPositionController
                 joint: lower_neck_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
 
-            upper_neck_controller:
+            upper_neck_joint_controller:
                 type: position_controllers/JointPositionController
                 joint: upper_neck_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
 
-            upper_tail_controller:
+            upper_tail_joint_controller:
                 type: position_controllers/JointPositionController
                 joint: upper_tail_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
 
-            lower_tail_controller:
+            lower_tail_joint_controller:
                 type: position_controllers/JointPositionController
                 joint: lower_tail_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
 
         velocity:
-            left_wheel_controller:
+            left_wheel_joint_controller:
                 type: velocity_controllers/JointVelocityController
                 joint: left_wheel_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
 
-            right_wheel_controller:
+            right_wheel_joint_controller:
                 type: velocity_controllers/JointVelocityController
                 joint: right_wheel_joint
                 pid: {p: 1, i: 0, d: 0, i_clamp_min: 0, i_clamp_max: 0}
