DART Does not crash!
DART now doesn't crash due to explosive controller responses. This was in part due to poorly tuned controllers and in part due to a 0.01 timestep. Changing to 0.001 fixed this. In addition, I've updated/fixed some issues with the URDF.

--- a/frea_dart/config/simulation_parameters.yaml
+++ b/frea_dart/config/simulation_parameters.yaml
@@ -4,3 +4,10 @@ frea_dart:
         height: 960
         enable_rendering: true
         update_period: 20 # i.e. updates display once every 20 timesteps
+    robot:
+        parameter: "/robot_description"
+        X: 0
+        Y: 0
+        Z: 0.1
+    simulation:
+        steps_per_s: 1000
