--- a/frea_dart/package.xml
+++ b/frea_dart/package.xml
@@ -16,4 +16,5 @@
   <depend>rospy</depend>
   <depend>controller_manager</depend>
   <depend>hardware_interface</depend>
+  <depend>eigen_conversions</depend>
 </package>
