--- a/frea_dart/config/simulation_parameters.yaml
+++ b/frea_dart/config/simulation_parameters.yaml
@@ -3,11 +3,6 @@ frea_dart:
         width: 1280
         height: 960
         enable_rendering: true
-        update_period: 20 # i.e. updates display once every 20 timesteps
-    robot:
-        parameter: "/robot_description"
-        X: 0
-        Y: 0
-        Z: 0.1
+        fps: 60
     simulation:
         steps_per_s: 1000
