--- a/frea_dart/config/simulation_parameters.yaml
+++ b/frea_dart/config/simulation_parameters.yaml
@@ -5,4 +5,5 @@ frea_dart:
         enable_rendering: true
         fps: 60
     simulation:
-        steps_per_s: 1000
+        steps_per_s: 10
+        start_paused: true
