All known bugs now fixedgit status Training is in progress, I'm sure I'll find more issues soon :upside_down_smile:

--- a/frea_dart/CMakeLists.txt
+++ b/frea_dart/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(catkin REQUIRED COMPONENTS
     frea_msgs
     roscpp
     rospy
+    urdf
     controller_manager
     hardware_interface
     eigen_conversions
