--- a/frea_dart/package.xml
+++ b/frea_dart/package.xml
@@ -14,6 +14,7 @@
   <depend>frea_msgs</depend>
   <depend>roscpp</depend>
   <depend>rospy</depend>
+  <depend>urdf</depend>
   <depend>controller_manager</depend>
   <depend>hardware_interface</depend>
   <depend>eigen_conversions</depend>
